--- a/css/activity.css
+++ b/css/activity.css
@@ -125,13 +125,17 @@ a{
 
 .section-2,
 .section-3,
-.section-4 {
+.section-4,
+.section-5 {
   height: 85vh;
+  
 }
+
 
 .section-2 .hero-sec2,
 .section-3 .hero-sec2,
-.section-4 .hero-sec2 {
+.section-4 .hero-sec2,
+.section-5 .hero-sec2 {
   margin: 20px auto 0 auto;
   height: 200px;
   width: 400px;
@@ -294,7 +298,12 @@ footer .logo-div .logo-white {
     overflow-y: scroll;
     overflow-x: hidden !important;
   }
-
+  .section-3,
+  .section-4,
+  .section-5{
+    margin-top: -120px;
+  }
+  
   .section-1 {
     /* margin-top: 400px; */
     background-position: 0px;
