--- a/css/index.css
+++ b/css/index.css
@@ -471,7 +471,8 @@ a {
     margin-bottom: 40px;
   }
   .section-3 {
-    margin-top: 180vh;
+    margin-top: 160vh;
+    height: 70vh;
   }
 
   .testimonial-para {
@@ -506,21 +507,47 @@ a {
 
   .slider img {
     height: 150px;
-    width: 200px !important;
+   
     margin-right: 3px;
   }
 
   footer {
     margin-top: 40px;
-    height: 65vh;
+    height: 37vh;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-wrap: wrap;
+    gap: 2px;
   }
-
+footer .activites-footer, footer .our-team-footer, footer .contact-us{
+  height: auto;
+  margin-top: 30px;
+}
   footer .activites-footer h2,
   .our-team-footer h2,
   .contact-us h2 {
-    font-size: 20px;
+    font-size: 18px;
+    width: 120%;
   }
+
+footer .logo-div .logo-white{
+
+  width: 80px;
+  height: 80px;
+}
+
+.slider{
+  height: 10vh;
+  position: relative;
+}
+.slick-dots{
+  position: absolute;
+  top: 190px;
+}
+
+.section-4{
+  height: 40vh;
+}
 }
 
 @media only screen and (min-width: 768px) {
