--- a/css/activity.css
+++ b/css/activity.css
@@ -364,21 +364,29 @@ footer .logo-div .logo-white {
   }
 
   footer {
-    margin-top: 50px;
-    height: 50vh;
+    margin-top: 40px;
+    height: 37vh;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 2px;
   }
-
+footer .activites-footer, footer .our-team-footer, footer .contact-us{
+  height: auto;
+  margin-top: 30px;
+}
   footer .activites-footer h2,
   .our-team-footer h2,
   .contact-us h2 {
-    font-size: 15px;
+    font-size: 18px;
+    width: 120%;
   }
 
-  footer .activites-footer p,
-  .our-team-footer p,
-  .contact-us p {
-    font-size: 12px;
-  }
+footer .logo-div .logo-white{
+
+  width: 80px;
+  height: 80px;
+}
 }
 @media only screen and (min-width: 768px) {
   
